# code-review-system

./: .gitignore  README.md  backend-task.md  docker-compose.yml
code_analysis_service/: Dockerfile  pyproject.toml  requirements.txt
code_analysis_service/app/: code_analyzer.py  config.py  main.py  tasks.py
code_analysis_service/tests/: test_main.py
llm_service/: Dockerfile  pyproject.toml  requirements.txt
llm_service/app/: config.py  main.py  services.py
llm_service/tests/: test_main.py
local_llm_service/: Dockerfile  requirements.txt
local_llm_service/app/: main.py
